# EQL_GitHub_Setup

./: Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd_workflow.yml  ci_workflow.yml  create_databricks_folder.yml  github_secrets.yml  simple_workflow.yml
